tests/baselines/reference/jsxNamespaceNoElementChildrenAttributeReactJsx(jsx=react-jsxdev).errors.txt
/test.tsx(1,49): error TS2741: Property 'children' is missing in type '{}' but required in type '{ children: string; }'.
/test.tsx(3,18): error TS2741: Property 'children' is missing in type '{}' but required in type '{ children: string; }'.


==== /jsx.d.ts (0 errors) ====
    declare namespace JSX {
      interface IntrinsicElements {
        h1: { children: string }
      }
    
      type Element = string;
    }
    
==== /test.tsx (2 errors) ====
    const Title = (props: { children: string }) => <h1>{props.children}</h1>;
                                                    ~~
!!! error TS2741: Property 'children' is missing in type '{}' but required in type '{ children: string; }'.
!!! related TS2728 /jsx.d.ts:3:11: 'children' is declared here.
    
    const element = <Title>Hello, world!</Title>;
                     ~~~~~
!!! error TS2741: Property 'children' is missing in type '{}' but required in type '{ children: string; }'.
!!! related TS2728 /test.tsx:1:25: 'children' is declared here.
    
==== /jsx/jsx-runtime.ts (0 errors) ====
    export {};
==== /jsx/jsx-dev-runtime.ts (0 errors) ====
    export {};